--- a/Views/Vehicles/Create.cshtml
+++ b/Views/Vehicles/Create.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-<h3>Register A Vehicle </h3>
-<hr />
 <div class="row">
     <div class="col-md-8">
+        <div class="d-sm-flex align-items-center justify-content-between mb-4">
+            <h5 class="mb-0 text-gray-800">Register A Vehicle</h5>
+            <a asp-action="Index"  class="btn btn-sm btn-primary shadow-sm">Back To Register</a>
+        </div>
         <div class="card shadow">
             <div class="card-body">
                 <form asp-action="Create">
@@ -43,9 +45,6 @@
     </div>
 </div>
 
-<div class="mt-4">
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
