--- a/Views/Vehicles/Delete.cshtml
+++ b/Views/Vehicles/Delete.cshtml
@@ -4,42 +4,56 @@
     ViewData["Title"] = "Delete";
 }
 
-<h3>Delete Vehicle Registration</h3>
+<div class="row justify-content-center">
 
-<h6>Are you sure you want to delete this?</h6>
-<div>
-    <hr />
-   <dl class="row">
-        <dt class = "col-sm-2">
-             Vehicle Reg Number
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VehicleRegNumber)
-        </dd>
-        <dt class = "col-sm-2">
-             Owner National ID Number
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OwnerNationalIdNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            Monthly Insurance Amount
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MonthlyInsuranceAmount)
-        </dd>
-        <dt class = "col-sm-2">
-             Date of Registration
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfRegistration)
-        </dd>
-       
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="col-md-12">
+        <div class="d-sm-flex align-items-center justify-content-between mb-4">
+            <h5 class="mb-0 text-gray-800">Delete Vehicle Registration</h5>
+            <div>
+                <a asp-action="Index" class="btn btn-primary btn-sm">Back to Register</a>
+            </div>
+        </div>
+
+        <div class="card shadow mb-4">
+            <div class="card-header">
+                <h6>Are you sure you want to delete this?</h6>
+            </div>
+            <div class="card-body">
+                <dl class="row">
+                    <dt class = "col-sm-2">
+                        Vehicle Reg Number
+                    </dt>
+                    <dd class = "col-sm-10">
+                        @Html.DisplayFor(model => model.VehicleRegNumber)
+                    </dd>
+                    <dt class = "col-sm-2">
+                        Owner National ID Number
+                    </dt>
+                    <dd class = "col-sm-10">
+                        @Html.DisplayFor(model => model.OwnerNationalIdNumber)
+                    </dd>
+                    <dt class = "col-sm-2">
+                        Monthly Insurance Amount
+                    </dt>
+                    <dd class = "col-sm-10">
+                        @Html.DisplayFor(model => model.MonthlyInsuranceAmount)
+                    </dd>
+                    <dt class = "col-sm-2">
+                        Date of Registration
+                    </dt>
+                    <dd class = "col-sm-10">
+                        @Html.DisplayFor(model => model.DateOfRegistration)
+                    </dd>
+                
+                </dl>
+            </div>
+            <div class="card-footer">
+                <form asp-action="Delete">
+                    <input type="hidden" asp-for="Id" />
+                    <input type="submit" value="Delete" class="btn btn-danger" /> 
+                </form>
+            </div>
+        </div>
+
+    </div>
 </div>
