--- a/Views/Vehicles/Edit.cshtml
+++ b/Views/Vehicles/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <div class="d-sm-flex align-Register-center justify-content-between mb-4">
+        <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h5 class="mb-0 text-gray-800">Edit A Vehicle Details</h5>
             <a asp-action="Index"  class="btn btn-sm btn-primary shadow-sm">Back To Register</a>
         </div>
